Added some new contents and improved ui

--- a/package.json
+++ b/package.json
@@ -15,8 +15,18 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/material": "^7.3.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@tiptap/extension-code-block-lowlight": "^3.4.3",
+    "@tiptap/extension-link": "^3.4.3",
+    "@tiptap/extension-placeholder": "^3.4.3",
+    "@tiptap/extension-strike": "^3.4.3",
+    "@tiptap/extension-underline": "^3.4.3",
+    "@tiptap/react": "^3.4.3",
+    "@tiptap/starter-kit": "^3.4.3",
     "axios": "^1.12.1",
+    "dotenv": "^17.2.2",
+    "highlight.js": "^11.11.1",
     "jwt-decode": "^4.0.0",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -27,8 +37,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/highlight.js": "^9.12.4",
+    "@types/node": "^24.4.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
